--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-modules-require-hook": "2.0.4",
     "express": "4.13.3",
     "history": "1.13.1",
+    "marked": "0.3.5",
     "react": "0.14.3",
     "react-dom": "0.14.3",
     "react-router": "1.0.0"
