--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "0.14.3",
     "react-dom": "0.14.3",
     "react-router": "1.0.0",
+    "react-simple-pie-chart": "^0.3.1",
     "react-tagsinput": "^3.4.1"
   },
   "devDependencies": {
